--- a/my-app/styles/Home.module.css
+++ b/my-app/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -107,4 +107,4 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
-}
+} */
